<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text= "QUESTIONS"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.EcoMap.Description"
            android:text= "@string/location_text"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:hint="@string/label_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.EcoMap.Description"
            android:text= "@string/date_text"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/DateInput"
            android:layout_width="365dp"
            android:layout_height="65dp"
            android:layout_marginHorizontal="24dp"
            app:backgroundTint="@color/white"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/grey"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.EcoMap.Description"
            android:text= "@string/name_text"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:hint="@string/lable_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.EcoMap.Description"
            android:text= "@string/memo_text"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:hint="@string/label_memo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/upload_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:text="@string/submit"
            android:textAppearance="?attr/textAppearanceButton"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>